--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,46 @@
-version: "3.9"
-
 services:
-  db:
+  turnos_medicos_db:
     image: postgres:15
-    container_name: app_db
+    container_name: turnos_medicos_db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: user123
+      POSTGRES_DB: turnos_medicos_db
     ports:
-      - "5532:5432" # <- host 5532 -> container 5432
+      - "5532:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - turnos_medicos_data:/var/lib/postgresql/data
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
-  app:
+  adminer:
+    image: adminer
+    container_name: turnos_medicos_adminer
+    restart: unless-stopped
+    ports:
+      - "8088:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: turnos_medicos_db
+    depends_on:
+      - turnos_medicos_db
+
+  turnos_medicos_app:
     build:
       context: .
       args:
-        APP_PORT: ${APP_PORT}
-    container_name: app_web
+        APP_PORT: 8087
+    container_name: turnos_medicos_app
     restart: unless-stopped
     environment:
-      DB_HOST: db
-      DB_PORT: 5432        # <- importante: puerto interno real
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: turnos_medicos_db
+      DB_PORT: 5432
+      DB_NAME: turnos_medicos_db
+      DB_USER: user
+      DB_PASSWORD: user123
     ports:
-      - "${APP_PORT}:8080"
+      - "8087:8080"
     depends_on:
-      - db
+      - turnos_medicos_db
 
 volumes:
-  db_data:
+  turnos_medicos_data:
