se separa css y se coloca en un archivo global

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,8 @@ tasks.withType(JavaCompile) {
 
 war {
     archiveFileName = 'turnos_medicos.war'
+    
+    // El plugin war ya copia automáticamente src/main/webapp
+    // Solo necesitamos configurar la estrategia de duplicados
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
